[package]
name = "snmpproxy"
version = "0.1.0"
edition = "2021"
authors = ["Vladimir Melnikov <wlad.w.m@gmail.com>"]
description = "SNMP caching proxy"
license = "MIT/Apache-2.0"
repository = "https://github.com/wladwm/snmpproxy"
readme = "README.md"
keywords = ["networking", "snmp", "monitoring"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
futures-util = "0.3.31"
mio = { version="1", features = ["os-poll","net"]}
tokio = { version="1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = [ "codec" ] }
bytes = "1.10.1"
chrono = "0.4.23"
log = "0.4.17"
pretty_env_logger = "0.5.0"
anyhow = "1.0.98"
socket2 = "0.6.0"
parking_lot = "0.12.4"
clap = { version="4.1.1", features = ["derive"] }
snmp = { git = "https://github.com/wladwm/rust-snmp.git", rev = "d94c033e" }


[target.'cfg(unix)'.dependencies]
libc = { version = "0.2" }

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = ["ws2def","ws2ipdef","mswsock","mswsockdef"]

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.60.2"
features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_System_IO",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
]

[profile.release]
opt-level = 3
strip = true
lto = true        # Enable link-time optimization